--- a/src/font.less
+++ b/src/font.less
@@ -8,7 +8,7 @@
 .text-right { text-align: right; }
 
 .bold { font-weight: bold; }
-.italic { font-weight: italic; }
+.italic { font-style: italic; }
 
 // text-transform
 .text-capitalize {
@@ -52,6 +52,14 @@
     line-height: @value/10;
   }
 });
+
+// letter-spacing
+.for(8 9 10 11 12 13 14 15 16 17 18 19 20, {
+  .letter-spacing-@{value} {
+    letter-spacing: @value * 1px;
+  }
+});
+
 
 // ellipsis/line-clamp
 .ellipsis {
